# learn-rust-web

./: Cargo.toml
src/: main.rs
static/: index.html
