[package]
name = "catdex"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
serde_json = "1.0.85"
handlebars = { version = "4.3.4", features = ["dir_source"] }
